# turtlebot3_slam_3d

./: .rosinstall  CMakeLists.txt  README.md  package.xml
config/: darknet_config.yaml  mapping.rviz  navigation.rviz  yolo.rviz  yolo_markers.rviz
launch/: darknet.launch  demo_bag.launch  play_bag.launch  publish_model.launch  rtabmap.launch  turtlebot3_d435_bringup.launch  turtlebot3_monster_model.launch  turtlebot3_rtabmap.launch  turtlebot3_slam_3d.launch  turtlebot3_zed_bringup.launch
meshes/: waffle_deep_zed_mini_stand.stl  waffle_deep_zed_mini_stand.stp
scripts/: detection_clustering.py  detection_collector.py  detection_publisher.py
srv/: GetObjectLocation.srv
urdf/: turtlebot3_monster.urdf.xacro  waffle_deep.urdf.xacro
